[workspace]
members = [
    "mkwebfont",
    "mkwebfont_common",
    "mkwebfont_extract-web",
    "mkwebfont_subset-tool",
    "mkwebfont_hb-subset", "mkwebfont_fontops",
]
resolver = "2"

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 's'
lto = true

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
async-recursion = "1.1"
bincode = "2.0.0-rc.3"
bindgen = "0.69"
cc = "1.0"
enumset = { version = "1.1", features = ["serde"] }
glob = "0.3"
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crates in the workspace
mkwebfont_common = { version = "0.2.0-alpha1", path = "mkwebfont_common" }
mkwebfont_fontops = { version = "0.1.0", path = "mkwebfont_fontops" }
mkwebfont_hb-subset = { version = "0.3.0", path = "mkwebfont_hb-subset" }
