[workspace]
members = [
    "mkwebfont",
    "mkwebfont_common",
    "mkwebfont_fontops",
    "mkwebfont_extract-web",
    "mkwebfont_hb-subset",
    "mkwebfont_kuchikiki",
]
resolver = "2"

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
arcstr = "1.2.0"
async-recursion = "1.1"
bincode = "2.0.0-rc.3"
enumset = { version = "1.1", features = ["serde"] }
glob = "0.3"
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build-time dependencies
cc = "1.0"

# Unicode data
unicode-blocks = "0.1"
unicode-properties = "0.1"

# Crates in the workspace
mkwebfont_common = { version = "0.4.0", path = "mkwebfont_common" }
mkwebfont_extract-web = { version = "0.2.1", path = "mkwebfont_extract-web" }
mkwebfont_fontops = { version = "0.2.1", path = "mkwebfont_fontops" }
mkwebfont_hb-subset = { version = "0.4.1", path = "mkwebfont_hb-subset" }
mkwebfont_kuchikiki = { version = "0.8.2-mkwebfont", path = "mkwebfont_kuchikiki" }
