[package]
name = "mkwebfont"
version = "0.1.1"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A simple tool for turning .ttf/.otf files into webfonts."
keywords = ["fonts"]
categories = ["command-line-utilities"]

repository = "https://github.com/Lymia/mkwebfont"
readme = "README.md"

license = "Apache-2.0"

include = [
    "src",
    "LICENSE-APACHE",
    "build.rs",
    "contrib/woff2/include",
    "contrib/woff2/src",
    "contrib/woff2/brotli/c/include",
    "contrib/woff_wrapper",
]

[features]
default = ["binary", "bundled-harfbuzz", "download-data"]
binary = ["clap", "tracing-subscriber"]
bundled-harfbuzz = ["hb-subset/bundled"]
appimage = []
download-data = ["directories", "reqwest"]

[[bin]]
name = "mkwebfont"
required-features = ["binary"]

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.5", features = ["pure"] }
brotli = { version = "5.0", features = ["ffi-api"] }
clap = { version = "4.5", features = ["derive"], optional = true }
hb-subset = "=0.3.0" # pinned for now, very low-usage crate
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
unic-ucd-block = "0.9"

# Used only for downloading mkwebfont-datapkg packages.
directories = { version = "5.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"], optional = true }

# Unicode data
unicode-blocks = "0.1"
unicode-properties = "0.1"

# Subcrates
mkwebfont_common = { path = "../mkwebfont_common" }

[build-dependencies]
cc = "1.0"
