[package]
name = "mkwebfont"
version = "0.2.0-alpha1"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A simple tool for turning .ttf/.otf files into webfonts."
keywords = ["fonts"]
categories = ["command-line-utilities"]

repository = "https://github.com/Lymia/mkwebfont"
readme = "README.md"

license = "Apache-2.0"

[features]
default = ["binary", "download-data"]
binary = ["clap", "tracing-subscriber"]
appimage = []
download-data = ["directories", "reqwest"]

[[bin]]
name = "mkwebfont"
required-features = ["binary"]

[dependencies]
blake3 = { version = "1.5", features = ["pure"] }
clap = { version = "4.5", features = ["derive"], optional = true }
ordered-float = { version = "4.0", default-features = false }

# Used only for downloading mkwebfont-datapkg packages.
directories = { version = "5.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"], optional = true }

# Unicode data
unicode-blocks = "0.1"

# Common Dependencies
anyhow = { workspace = true }
enumset = { workspace = true }
tokio = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Subcrates
mkwebfont_common = { workspace = true }
mkwebfont_fontops = { workspace = true }
