[package]
name = "mkwebfont"
version = "0.2.0-alpha8"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A simple tool for turning .ttf/.otf files into webfonts."
keywords = ["fonts"]
categories = ["command-line-utilities"]

repository = "https://github.com/Lymia/mkwebfont"
readme = "README.md"

license = "Apache-2.0"

[features]
default = ["binary", "download-data"]
binary = ["clap", "tracing-subscriber"]
appimage = []
download-data = ["directories", "ureq"]

[[bin]]
name = "mkwebfont"
required-features = ["binary"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = "1.0"
ordered-float = { version = "4.0", default-features = false }

# Used only for downloading mkwebfont-datapkg packages.
directories = { version = "5.0", optional = true }
ureq = { version = "2.9", optional = true }

# Unicode data
unicode-blocks = { workspace = true}

# Common Dependencies
anyhow = { workspace = true }
arcstr = { workspace = true }
enumset = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Subcrates
mkwebfont_common = { workspace = true }
mkwebfont_extract-web = { workspace = true }
mkwebfont_fontops = { workspace = true }
