[package]
name = "mkwebfont_common"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Internal crate for mkwebfont."
repository = "https://github.com/Lymia/mkwebfont"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
bincode = "2.0.0-rc.3"
blake3 = { version = "1.5", features = ["pure"] }
roaring = "0.10"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
wyrand = { version = "=0.2.0", features = ["wyhash"] } # low usage crate, pin version
zstd = { version = "0.13", features = ["zstdmt"] }
