[package]
name = "mkwebfont_common"
version = "0.5.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Internal crate for mkwebfont."
repository = "https://github.com/Lymia/mkwebfont"

license = "Apache-2.0"
readme = "README.md"

[dependencies]
blake3 = { version = "1.5", features = ["pure"] }
wyrand = { version = "=0.2.0", features = ["wyhash"] } # low usage crate, pin version
zstd = { version = "0.13", features = ["zstdmt"] }

# Used for downloading packages from the internet.
directories = { version = "5.0" }
ureq = { version = "2.9" }

# Common Dependencies
anyhow = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
