[package]
name = "mkwebfont_extract-gfsubsets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "blocking"] }
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unic-ucd-category = "0.9"
