[package]
name = "mkwebfont_extract-web"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Internal crate for mkwebfont."
repository = "https://github.com/Lymia/mkwebfont"

license = "Apache-2.0"
readme = "README.md"

[dependencies]
arcstr = "1.2.0"
cssparser = "0.33"
ego-tree = "0.6"
lightningcss = { version = "1.0.0-alpha.57", features = ["into_owned"] }
moka = { version = "0.12", features = ["future"] }
scraper = "0.19.0"

# Common Dependencies
anyhow = { workspace = true }
enumset = { workspace = true }
glob = { workspace = true }
async-recursion = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Subcrates
mkwebfont_common = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
