[package]
name = "mkwebfont_fontops"
version = "0.2.1"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Internal crate for mkwebfont."
repository = "https://github.com/Lymia/mkwebfont"

license = "Apache-2.0"
readme = "README.md"

include = [
    "src",
    "LICENSE-APACHE",
    "build.rs",
    "contrib/woff2/include",
    "contrib/woff2/src",
    "contrib/woff2/brotli/c/include",
    "contrib/woff_wrapper",
]

[dependencies]
toml = "0.8 "

# Linking-only dependencies (Rust implementation, used by woff2)
brotli = { version = "6.0", features = ["ffi-api"] }

# Unicode data
unicode-blocks = { workspace = true }

# Common Dependencies
anyhow = { workspace = true }
bincode = { workspace = true }
enumset = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Subcrates
mkwebfont_common = { workspace = true }
mkwebfont_hb-subset = { workspace = true }

[dev-dependencies]
chrono = "0.4"
git2 = { version = "0.19", default-features = false }

# Serde-related
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Unicode data
unicode-properties = { workspace = true }

# Common Dependencies
glob = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
cc = { workspace = true }
