[package]
name = "mkwebfont_hb-subset"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A wrapper for HarfBuzz font subsetting API "
homepage = "https://github.com/henkkuli/hb-subset-rs"
repository = "https://github.com/henkkuli/hb-subset-rs"
readme = "README.md"
keywords = ["font", "subsetting", "harfbuzz"]
categories = ["api-bindings", "encoding"]

exclude = [
    "harfbuzz/",
    "!harfbuzz/src",
    "!harfbuzz/COPYING",
    "tests/fonts",
    ".github",
]

[lib]
name = "hb_subset"

[dependencies]
thiserror = "1.0"

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }
