[package]
name = "mkwebfont_subset-tool"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
clap = { version = "4.5", features = ["derive"]     }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warc = "0.3"
zstd = "0.13"

ordered-float = { version = "4.0", default-features = false }

# Unicode data
unicode-blocks = "0.1"
unicode-properties = "0.1"

# Subcrates
mkwebfont = { path = "../mkwebfont" }
mkwebfont_common = { path = "../mkwebfont_common" }
