[package]
name = "mkwebfont_subset-tool"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"]     }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warc = "0.3"
zstd = "0.13"

ordered-float = { version = "4.0", default-features = false }

# Common Dependencies
anyhow = { workspace = true }
async-recursion = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }

# Unicode data
unicode-blocks = "0.1"
unicode-properties = "0.1"

# Subcrates
mkwebfont = { path = "../mkwebfont" }
mkwebfont_common = { path = "../mkwebfont_common" }
